[package]
name = "cc13x2"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
description = "Peripheral Access Crate for CC13x2 MCUs."
documentation = "https://docs.rs/cc13x2"
homepage = "https://github.com/jeandudey/cc13x2-rs"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bare-metal = "0.2"
cortex-m = "0.6"
vcell = "0.1"

[dependencies.cortex-m-rt]
optional = true
version = "0.6"

[features]
rt = ["cortex-m-rt"]
aux_adi4 = []
aon_batmon = []
aon_event = []
aon_ioc = []
aon_pmctl = []
aon_rtc = []
aux_aiodio0 = []
aux_aiodio1 = []
aux_aiodio2 = []
aux_aiodio3 = []
aux_anaif = []
aux_evctl = []
aux_mac = []
aux_sce = []
aux_smph = []
aux_spim = []
aux_sysif = []
aux_tdc = []
aux_timer01 = []
aux_timer2 = []
ccfg = []
cpu_dwt = []
cpu_fpb = []
cpu_itm = []
cpu_scs = []
cpu_tiprop = []
cpu_tpiu = []
crypto = []
aux_ddi0_osc = []
event = []
fcfg1 = []
flash = []
gpio = []
gpt0 = []
gpt1 = []
gpt2 = []
gpt3 = []
i2c0 = []
i2s0 = []
ioc = []
pka = []
pka_int = []
prcm = []
rfc_dbell = []
rfc_pwr = []
rfc_rat = []
smph = []
sram_mmr = []
ssi0 = []
ssi1 = []
trng = []
uart0 = []
uart1 = []
udma0 = []
vims = []
wdt = []
